--- a/options.html
+++ b/options.html
@@ -5,17 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pagination Shortcuts</title>
 </head>
-<body style="color: currentColor; accent-color: firebrick;">
+<body style="color: currentColor; accent-color: firebrick; height: 100%;">
 	<p>
-		yada yada
+		Coming soon! Lorem ipsum dolor sit amet.
 	</p>
 	<form>
-		<label>Blacklist</label>
+		<label>Site Blacklist</label>
 		<input type="text" name="blacklist" />
 		<button type="submit">Save</button>
 	</form>
 	<form>
-		<label>Whitelist</label>
+		<label>Site Whitelist</label>
 		<input type="text" name="whitelist" />
 		<button type="submit">Save</button>
 	</form>
